--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon app.js",
+    "start": "nodemon app.js",
     "compile": "babel src --presets @babel/react src --out-dir public",
     "watch": "babel src --presets @babel/react src --out-dir public --watch --verbose"
   },
